chore: remove facebook link to site page

--- a/templates/base.html
+++ b/templates/base.html
@@ -175,7 +175,7 @@
                             <a
                             class="btn text-white btn-floating m-1"
                             style="background-color: #3b5998;"
-                            href="https://www.facebook.com/profile.php?id=100091862172437"
+                            href="https://www.facebook.com/"
                             role="button" target="_blank" rel="noopener"
                             aria-label="Visit our Facebook page (opens in a new tab)"
                             ><i class="fab fa-facebook-f"></i
