docs: add features testing

--- a/templates/base.html
+++ b/templates/base.html
@@ -178,6 +178,7 @@
                             href="https://www.facebook.com/"
                             role="button" target="_blank" rel="noopener"
                             aria-label="Visit our Facebook page (opens in a new tab)"
+                            rel="nofollow"
                             ><i class="fab fa-facebook-f"></i
                             ></a>
                             <!-- Pinterest -->
@@ -187,6 +188,7 @@
                             href="https://www.pinterest.com/"
                             role="button" target="_blank" rel="noopener"
                             aria-label="Visit our Pinterest page (opens in a new tab)"
+                            rel="nofollow"
                             ><i class="fab fa-pinterest"></i
                             ></a>
                             <!-- Instagram -->
@@ -196,6 +198,7 @@
                             href="https://www.instagram.com/"
                             role="button" target="_blank" rel="noopener"
                             aria-label="Visit our Instagram page (opens in a new tab)"
+                            rel="nofollow"
                             ><i class="fab fa-instagram"></i
                             ></a>
                             <div class="mt-5">
