docs: correct readme text and add content to quote form

--- a/products/templates/products/quote_form.html
+++ b/products/templates/products/quote_form.html
@@ -19,6 +19,8 @@
             <hr class="w-50 mb-1">
             <h2 class="logo-font">Quote Form</h2>
             <hr class="w-50 mb-1">
+            <h5>We are now providing restoration quotations for chairs and sofas with more coming soon!</h5>  
+            <h5>Please select either <strong>sofas</strong> or <strong>chairs</strong> from the Category list below.</h5>
         </div>
         <div class="row">
             <div class="col-md-8 mt-3 mb-5 offset-md-2">
